@@ -34,7 +34,6 @@ use Zend\Paginator\Paginator;
 use Zend\Paginator\Adapter\DbSelect as DbSelectPaginator;
 use Zend\Db\Sql\Expression as Expression;
 use Zend\Db\ResultSet\ResultSet;
-use Zend\Db\Sql\Predicate\Predicate as Predicate;
 use Exception;
 
 class MembershipBase extends ApplicationAbstractBase
@@ -418,25 +417,26 @@ class MembershipBase extends ApplicationAbstractBase
 
         return false;
     }
+
     /**
-     * Get membership levels with empty language
+     * Get unused membership levels
      *
      * @param integer $limit
      * @return array
      */
-    public function getMembershipLevelsWithEmptyLanguage($limit)
+    public function getUnusedMembershipLevels($limit)
     {
-        $predicate = new Predicate();
         $select = $this->select();
         $select->from('membership_level')
             ->columns([
                 'id',
                 'image'
             ])
-            ->where([
-                $predicate->isNull('language')
-            ])
-            ->limit($limit);
+            ->limit($limit)
+            ->where
+                ->and->isNull('language')
+            ->where
+                ->or->isNull('role_id');
 
         $statement = $this->prepareStatementForSqlObject($select);
         $resultSet = new ResultSet;
