@@ -1,6 +1,7 @@
-Membership 1.0.1, Sep 13, 2015
+Membership 1.0.1, Sep 15, 2015
 ====================================
 
+- added functionality for deleting unused membership levels via the "delete content" service
 - added explanation for items in admin menu
 - fixed currency switching
 - added a license info into each file;
